Green test for Multiple Post & Get All Items and Updated Rest docs for Get Items

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -5,3 +5,11 @@ include::{snippets}/PostNewItem/http-request.adoc[]
 
 .response
 include::{snippets}/PostNewItem/http-response.adoc[]
+
+Get List of All Items
+
+.request
+include::{snippets}/GetAllItems/http-request.adoc[]
+
+.response
+include::{snippets}/GetAllItems/http-response.adoc[]
