Add doc for the newly created end point - postInvoiceWithNoInvoiceNumber

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -33,6 +33,14 @@ include::{snippets}/createNewInvoice/http-request.adoc[]
 .response
 include::{snippets}/createNewInvoice/http-response.adoc[]
 
+Create an invoice without invoice number
+
+.request
+include::{snippets}/postInvoiceWithNoInvoiceNumber/http-request.adoc[]
+
+.response
+include::{snippets}/postInvoiceWithNoInvoiceNumber/http-response.adoc[]
+
 Get Invoice Summary
 
 .request
