refactors company, adds expanded Address properties, updates to use companyName as primaryKey, adds Rest Doc details to getAll

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -49,10 +49,20 @@ include::{snippets}/getInvoiceDetail/http-request.adoc[]
 .response
 include::{snippets}/getInvoiceDetail/http-response.adoc[]
 
-Post Company Details
+=== Companies
+
+Create / Add a New Company
 
 .request
 include::{snippets}/PostCompanyDetails/http-request.adoc[]
 
 .response
 include::{snippets}/PostCompanyDetails/http-response.adoc[]
+
+Get List of All Companies
+
+.request
+include::{snippets}/GetAllCompanies/http-request.adoc[]
+
+.response
+include::{snippets}/GetAllCompanies/http-response.adoc[]
