--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -1,68 +1,121 @@
-= Invoicify APIs
-Welcome to Invoicify solutions by SMS
-:toc:
-:toclevels: 4
+= Invoicify API v1.0.0
+API Documentation for Invoicify solutions by Team SMS
+:doctype: book
+:icons: font
+:source-highlighter: highlightjs
+:toc: left
+:toc-title: Invoicify
+:toclevels: 5
+:sectlinks:
+:sectnums:
 
-== APIs
+[[overview]]
+= Overview
 
+[[overview-contributors]]
+== Contributors
+John Tansor
+Selva
+Sebin
+Maanick
+Ravi
+
+[[overview-description]]
+== Summary
+
+Placeholder for brief summary of application
+
+[[overview-http-verbs]]
+== HTTP verbs
+
+RESTful notes tries to adhere as closely as possible to standard HTTP and REST conventions in its
+use of HTTP verbs.
+
+|===
+| Verb | Usage
+
+| `GET`
+| Used to retrieve a resource
+
+| `POST`
+| Used to create a new resource
+|===
+
+[[specification]]
+= Specifications
+
+[[specification-API]]
+== Invoicify API
+
+[[specification-API-item]]
 === Item
+
+[[specification-API-item-post]]
+==== POST
 
 Post a New Item
 
 .request
-include::{snippets}/PostNewItem/http-request.adoc[]
+include::{snippets}/items-controller-it/post-item/1/http-request.adoc[]
+
+include::{snippets}/items-controller-it/post-item/1/request-fields.adoc[]
 
 .response
-include::{snippets}/PostNewItem/http-response.adoc[]
+include::{snippets}/items-controller-it/post-item/1/http-response.adoc[]
+
+include::{snippets}/items-controller-it/post-item/1/request-body.adoc[]
+
+[[specification-API-item-getall]]
+==== GET
 
 Get List of All Items
 
 .request
-include::{snippets}/GetAllItems/http-request.adoc[]
+include::{snippets}/items-controller-it/post-multiple-item/3/http-request.adoc[]
 
 .response
-include::{snippets}/GetAllItems/http-response.adoc[]
+include::{snippets}/items-controller-it/post-multiple-item/3/http-response.adoc[]
 
 === Invoice
 
 Create an invoice
 
 .request
-include::{snippets}/createNewInvoice/http-request.adoc[]
+include::{snippets}/createNewInvoice/
 
 .response
-include::{snippets}/createNewInvoice/http-response.adoc[]
+include::{snippets}/createNewInvoice/
 
 Get Invoice Summary
 
 .request
-include::{snippets}/getInvoiceSummary/http-request.adoc[]
+include::{snippets}/getInvoiceSummary/
 
 .response
-include::{snippets}/getInvoiceSummary/http-response.adoc[]
+include::{snippets}/getInvoiceSummary/
 
 Get Invoice Details
 
 .request
-include::{snippets}/getInvoiceDetail/http-request.adoc[]
+include::{snippets}/getInvoiceDetail/
 
 .response
-include::{snippets}/getInvoiceDetail/http-response.adoc[]
+include::{snippets}/getInvoiceDetail/
 
 === Companies
 
 Create / Add a New Company
 
 .request
-include::{snippets}/PostCompanyDetails/http-request.adoc[]
+include::{snippets}/PostCompanyDetails/
 
 .response
-include::{snippets}/PostCompanyDetails/http-response.adoc[]
+include::{snippets}/PostCompanyDetails/
 
 Get List of All Companies
 
 .request
-include::{snippets}/GetAllCompanies/http-request.adoc[]
+include::{snippets}/GetAllCompanies/
 
 .response
-include::{snippets}/GetAllCompanies/http-response.adoc[]
+include::{snippets}/GetAllCompanies/
