WIP: updating documentation for InvoiceController, pulling main to update changes from remote

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -78,6 +78,8 @@ include::{snippets}/items-controller-it/post-multiple-item/3/http-response.adoc[
 
 === Invoice
 
+==== POST
+
 Create an invoice
 
 .request
