--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -122,6 +122,8 @@ include::{snippets}/company-controller-it/update-company_when-company-exists/3/h
 
 ==== POST
 
+===== Create New Invoice
+
 Create an invoice
 
 .request
@@ -131,6 +133,8 @@ include::{snippets}/invoice-controller-it/create-one-success/2/request-fields.ad
 
 .response
 include::{snippets}/invoice-controller-it/create-one-success/2/http-response.adoc[]
+
+===== Nested Items
 
 Create Invoice with multiple Line Items
 
