updates documenation formatting and verbage

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -1,4 +1,4 @@
-= Invoicify API v1.0.0
+= Invoicify API v1.1.0
 API Documentation for Invoicify solutions by Team SMS
 :doctype: book
 :icons: font
@@ -93,7 +93,7 @@ Invoicify attempts to adhere as closely as possible to standard HTTP and REST co
 [[specification-API-Company-POST]]
 ==== POST
 
-Create / Add a New Company
+[small]#Creates a new company#
 
 .request
 include::{snippets}/company-controller-it/post-company-details/1/http-request.adoc[]
@@ -108,9 +108,9 @@ include::{snippets}/company-controller-it/post-company-details/1/http-response.a
 
 ===== Summary View, ALL
 
-Get Summary View Of All Companies
+Get summary list view of all companies
 
-[small]#Simple view which only displays Company names & City/State location#
+[small]#Simple view which only displays company names & City/State location information#
 
 .request
 include::{snippets}/company-controller-it/get-company-summary-view/3/http-request.adoc[]
@@ -120,9 +120,9 @@ include::{snippets}/company-controller-it/get-company-summary-view/3/http-respon
 
 ===== Detailed View, ALL
 
-Get Detailed View of All Companies
+Get detailed list view of all companies
 
-[small]#Detailed view displays a list of all Companies, as well as all attributes for each company#
+[small]#Detailed view displays a list of all companies, as well as all attributes for each company#
 
 .request
 include::{snippets}/company-controller-it/post-company-details/2/http-request.adoc[]
@@ -133,7 +133,9 @@ include::{snippets}/company-controller-it/post-company-details/2/http-response.a
 [[specification-API-Company-PUT]]
 ==== PUT
 
-Update Existing Company Details
+Update existing company details
+
+[small]#Update the attribute details of a particular company#
 
 .request
 include::{snippets}/company-controller-it/update-company_when-company-exists/3/http-request.adoc[]
@@ -148,9 +150,9 @@ include::{snippets}/company-controller-it/update-company_when-company-exists/3/h
 
 ==== POST
 
-===== Create New Invoice
+===== POST Invoice
 
-Create an invoice
+Creates a new invoice
 
 .request
 include::{snippets}/invoice-controller-it/create-one-success/2/http-request.adoc[]
@@ -160,9 +162,9 @@ include::{snippets}/invoice-controller-it/create-one-success/2/request-fields.ad
 .response
 include::{snippets}/invoice-controller-it/create-one-success/2/http-response.adoc[]
 
-===== Create w/ Nested Items
+===== POST -- Nested Items
 
-Create Invoice with multiple Line Items
+[small]#Create an invoice with multiple line items#
 
 .request
 include::{snippets}/invoice-controller-it/create-invoice-with-multiple-items/2/http-request.adoc[]
@@ -174,7 +176,7 @@ include::{snippets}/invoice-controller-it/create-invoice-with-multiple-items/2/h
 
 ===== Summary View, ALL
 
-Get Summary View of ALL Invoices
+[small]#Get summary view list of all invoices#
 
 .request
 include::{snippets}/invoice-controller-it/create-and-view-invoice-summary/3/http-request.adoc[]
@@ -184,7 +186,7 @@ include::{snippets}/invoice-controller-it/create-and-view-invoice-summary/3/http
 
 ===== Summary View, UNPAID
 
-Get Summary View of ALL Unpaid Invoices
+[small]#Get summary view list of all `UNPAID` invoices#
 
 .request
 include::{snippets}/invoice-controller-it/create-and-view-unpaid-invoice-summary/10/http-request.adoc[]
@@ -194,7 +196,7 @@ include::{snippets}/invoice-controller-it/create-and-view-unpaid-invoice-summary
 
 ===== Detailed View, ALL
 
-Get Details of ALL Invoices
+[small]#Get a detailed list of all invoices#
 
 .request
 include::{snippets}/invoice-controller-it/create-and-view-invoice-detail/4/http-request.adoc[]
@@ -204,7 +206,7 @@ include::{snippets}/invoice-controller-it/create-and-view-invoice-detail/4/http-
 
 ===== Detailed View, UNPAID
 
-Get Details of ALL Unpaid Invoices
+[small]#Get a detailed list of all `UNPAID` invoices#
 
 .request
 include::{snippets}/invoice-controller-it/create-and-view-unpaid-invoice-detail/7/http-request.adoc[]
@@ -214,7 +216,7 @@ include::{snippets}/invoice-controller-it/create-and-view-unpaid-invoice-detail/
 
 ===== GET Invoice by Number
 
-Retrieve an invoice by an invoice number.
+[small]#Retrieve a particular invoice by its invoice number#
 
 .request
 include::{snippets}/invoice-controller-it/search-invoices-by-number/4/http-request.adoc[]
@@ -224,7 +226,9 @@ include::{snippets}/invoice-controller-it/search-invoices-by-number/4/http-respo
 
 ==== PUT
 
-Update invoice - Change the payment status for a given invoice
+Update an Invoice
+
+[small]#Change the payment status for a given invoice#
 
 .request
 include::{snippets}/invoice-controller-it/update-and-view-invoice-details/3/http-request.adoc[]
@@ -265,7 +269,7 @@ include::{snippets}/items-controller-it/post-item/3/http-response.adoc[]
 [[specification-API-item-getall]]
 ==== GET
 
-Get List of All Items
+Get a list of all items
 
 .request
 include::{snippets}/items-controller-it/post-multiple-item/5/http-request.adoc[]
